[package]
name = "bug"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "signal",
  "fs",
  "time",
  "process",
] }
futures = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
rand = "0.8"
